<resources>
    <string name="app_name">Movie Db Test</string>
    <string name="title_popular_movie">Popular Movie</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="rating_is">Rating: #</string>
    <string name="movie">Movie</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="detail">Detail</string>
    <string name="favorite_movie">Favorite Movie</string>
</resources>