<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.MovieTypographyStyles.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip_8"
                android:paddingHorizontal="@dimen/dip_16"
                android:paddingVertical="@dimen/dip_8"
                android:text="@string/title_popular_movie" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shmr_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_dummy_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/dip_8"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingHorizontal="@dimen/dip_8"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                style="@style/TextAppearance.MovieTypographyStyles.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dip_16"
                android:paddingVertical="@dimen/dip_8"
                android:text="@string/title_top_rated" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shmr_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_dummy_top_rated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/dip_8"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_top_rated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingHorizontal="@dimen/dip_8"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                style="@style/TextAppearance.MovieTypographyStyles.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dip_16"
                android:paddingVertical="@dimen/dip_8"
                android:text="@string/title_now_playing" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shmr_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_dummy_now_playing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/dip_8"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_now_playing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingHorizontal="@dimen/dip_8"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </com.facebook.shimmer.ShimmerFrameLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>